[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/ship.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ship.gd" type="Script" id=2]
[ext_resource path="res://sprites/ship_turret.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[node name="Ship" type="RigidBody2D"]
position = Vector2( 356.296, 277.837 )
collision_layer = 2
collision_mask = 3
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -20, 20, 20, -20, 20 )

[node name="DropPickUp" type="Area2D" parent="."]
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 1000.0
angular_damp = 100.0
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPickUp"]
shape = SubResource( 2 )

[node name="GamePlayCamera" type="Camera2D" parent="."]
current = true

[node name="Turret" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )

[node name="BulletSpawn" type="Position2D" parent="Turret"]
position = Vector2( 0, -25 )

[node name="CanShootTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="DropPickUp" to="." method="_on_DropPickUp_body_entered"]
[connection signal="timeout" from="CanShootTimer" to="." method="_on_CanShootTimer_timeout"]
